ali code analysis